--- a/docs/_sass/custom/custom.scss
+++ b/docs/_sass/custom/custom.scss
@@ -49,7 +49,8 @@ body {
     
     .site-logo-img {
       max-height: 58px;
-      width: 224px;
+      max-width: 224px;
+      width: auto;
       height: auto;
       vertical-align: middle;
       flex-shrink: 0;
